--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -64,7 +64,7 @@
             </div>
           {% endif %}
 
-          {% for comments in comments %}
+          {% for comments in page_obj %}
             <div class="media mb-4">
               <div class="media-body">
                 <h5 class="mt-0">
@@ -77,7 +77,8 @@
                   </p>
                 </div>
               </div>
-          {% endfor %} 
+          {% endfor %}
+          {% include 'posts/includes/paginator.html' %} 
         </article>
       </div> 
 {% endblock %}
