--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -32,6 +32,22 @@
                 все посты пользователя
               </a>
             </li>
+            <li class="list-group-item">
+              {% if user.is_authenticated %}
+              <div class="card my-4">
+                <h5 class="card-header">Добавить комментарий:</h5>
+                <div class="card-body">
+                  <form method="post" action="{% url 'posts:add_comment' post.id %}">
+                    {% csrf_token %}      
+                    <div class="form-group mb-2">
+                      {{ form.text|addclass:"form-control" }}
+                    </div>
+                    <button type="submit" class="button" style="width: 100%">Отправить</button>
+                  </form>
+                </div>
+              </div>
+              {% endif %}
+            </li>
           </ul>
         </aside>
         <article class="col-12 col-md-9">
@@ -48,22 +64,6 @@
             </a>
           </li>
           {% endif %}
-
-          {% if user.is_authenticated %}
-            <div class="card my-4">
-              <h5 class="card-header">Добавить комментарий:</h5>
-              <div class="card-body">
-                <form method="post" action="{% url 'posts:add_comment' post.id %}">
-                  {% csrf_token %}      
-                  <div class="form-group mb-2">
-                    {{ form.text }}
-                  </div>
-                  <button type="submit" class="button">Отправить</button>
-                </form>
-              </div>
-            </div>
-          {% endif %}
-
           {% for comments in page_obj %}
             <div class="media mb-4">
               <div class="media-body">
