--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -5,23 +5,24 @@
   <title>Профайл пользователя {{ profile }}</title>
 {% endblock %}
 {% block content %}       
-    <h1>Все посты пользователя {{ profile.get_full_name }} </h1>
-    <h3>Всего постов: {{ posts_count }} </h3> 
-    {% if following %}
+    <h1>Все посты пользователя {{ profile.get_full_name }} 
+    {% if request.user != profile %}
+      {% if following %}
     <a
-      class="btn btn-lg btn-light"
-      href="{% url 'posts:profile_unfollow' profile.username %}" role="button"
+      href="{% url 'posts:profile_unfollow' profile.username %}"
     >
-      Отписаться
+    <button class="button" style="font-size: 18px">Отписаться</button>
     </a>
-    {% else %}
+      {% else %}
       <a
-        class="btn btn-lg btn-primary"
         href="{% url 'posts:profile_follow' profile.username %}" role="button"
       >
-        Подписаться
+      <button class="button" style="font-size: 18px">Подписаться</button>
       </a>
-    {% endif %} 
+      {% endif %}
+    {% endif %}
+    </h1>
+    <h3>Всего постов: {{ posts_count }} </h3>  
     {% for post in page_obj %} 
     <div class="post-card">
       <div class="post-card-left">
