--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,37 +1,10 @@
 {% extends 'base.html' %}
-{% load thumbnail %}
-
 {% block title %}
   <title> Записи сообщества {{ group.title }} </title>
 {% endblock %}
-
-
 {% block content %}
-    <h1> {{ group.title }} </h1>
-    <p>{{ group.description }}</p>
-  {% for post in page_obj %}
-    <div class="post-card">
-      <div class="post-card-left">
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-        <img class="card-img my-2" src="{{ im.url }}">
-        {% endthumbnail %}
-        <ul>
-          <li>
-            Автор: {{ post.author.get_full_name }}
-          </li>
-          <li>
-            Дата публикации: {{ post.pub_date|date:"d E Y" }}
-          </li>
-          <li>
-            <a href="{{ post.get_absolute_url }}">подробная информация </a>
-          </li>
-        </ul>
-      </div>
-      <div class="post-card-right">
-        <p>{{ post.text }}</p>
-      </div>
-    </div>
-  {% if not forloop.last %}<hr>{% endif %}
-{% endfor %}
+  <h1> {{ group.title }} </h1>
+  <p>{{ group.description }}</p>
+  {% include 'posts/includes/posts.html' %}
 {% include 'posts/includes/paginator.html' %}
 {% endblock %}
