--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,6 +1,4 @@
 {% extends 'base.html' %}
-{% load thumbnail %}
-
 {% block title %}
   <title>Профайл пользователя {{ profile }}</title>
 {% endblock %}
@@ -23,31 +21,6 @@
     {% endif %}
     </h1>
     <h3>Всего постов: {{ posts_count }} </h3>  
-    {% for post in page_obj %} 
-    <div class="post-card">
-      <div class="post-card-left">
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-        <img class="card-img my-2" src="{{ im.url }}">
-        {% endthumbnail %}
-        <ul>
-          <li>
-            Дата публикации: {{ post.pub_date|date:"d E Y" }} 
-          </li>
-          <li>
-            <a href="{{ post.get_absolute_url }}">подробная информация </a>
-          </li>
-          {% if post.group %}
-          <li>
-          <a href="{% url 'posts:groups' post.group.slug %}">все записи группы</a>
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-      <div class="post-card-right">
-        {{ post.text }}
-      </div>
-    </div>
-    {% if not forloop.last %}<hr>{% endif %}
-    {% endfor %}
+    {% include 'posts/includes/posts.html' %}
     {% include 'posts/includes/paginator.html' %}  
 {% endblock %}
